--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,16 @@
   "manifest_version": 3,
   "name": "Auto Ad Skipper",
   "version": "1.0.0",
-  "permissions": ["activeTab", "storage"],
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": [
+    "https://www.youtube.com/"
+  ],
   "icons": {
     "16": "icon16.png",
-    "19": "icon19.png",
     "32": "icon32.png",
-    "38": "icon38.png",
     "48": "icon48.png",
     "128": "icon128.png"
   },
