--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Auto Ad Skipper",
-  "version": "1.0.0",
+  "name": "Auto Ad Skipper For YouTube (AASFY)",
+  "version": "1.1.0",
+  "description": "Automatically skips YouTube ads for a seamless viewing experience. Not an Ad Blocker. No setup/registration/login required.",
   "permissions": [
     "storage"
   ],
